fixed spacing issue with project components when viewed on various screen sizes

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -31,7 +31,6 @@
         border-radius: 50%;
         border: 4px solid var(--color-primary-dark);
         box-shadow: var(--shadow-dark);
-        padding: 3px;
 
         @media only screen and (max-width: $bp-medium) {
             width: 250px;
