--- a/sass/components/_iphone.scss
+++ b/sass/components/_iphone.scss
@@ -17,7 +17,7 @@
     }
 
     @media only screen and (max-width: $bp-small) {
-        margin: 1rem;
+        // margin: 1rem;
     }
 
     &-screen {
